# cargo-workspace-unused-pub

./: .gitignore  CLAUDE.md  Cargo.toml
src/: main.rs
