[package]
name = "cargo-workspace-unused-pub"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Detect unused pub methods in a Rust workspace"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
colored = "3.1"
duct = "1.1"
env_logger = "0.11.3"
itertools = "0.14"
log = "0.4.21"
protobuf = "=3.7.2"
scip = "0.7"
regex = "1"
walkdir = "2.5.0"
